@@ -1,5 +1,10 @@
 2008-10-07  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
+	* flumotion/component/dvb/admin_gtk.py:
+	Fix UI page showing Channel Information.
+
+2008-10-07  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
 	* flumotion/component/dvb/dvb.py:
 	Fix up audio only streams by adding a queue after the tee.
 
